utils/immich/k8s/ingress/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-private
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: immich
spec:
  rules:
  - host: immich.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: immich-server
            port:
              number: 2283
